2006-04-25  Alex Roitman  <shura@gramps-project.org>
	* src/Makefile.am: Include BaseDoc in the docmodules list.
	* src/GrampsDb/_GrampsBSDDB.py: Different order of closing.

2006-04-24  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/GrampsDisplay.py: make manual work in Windows

2006-04-24  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: handle data_map during
	reload of the database
	* src/DataViews/_FamilyView.py: Config changes
	* src/ViewManager.py: Config changes
	* src/GrampsDb/_GrampsDbBase.py: Config changes
	* src/Exporter.py: Config changes
	* src/GrampsCfg.py: Config changes
	* src/Config/_GrampsConfigKeys.py: Config changes
	* src/Config/__init__.py: Config changes
	* src/Config/_GrampsGconfKeys.py: Config changes
	* src/Config/Makefile.am: Config changes
	* src/Config/_GrampsIniKeys.py: Config changes
	* src/Config/gen_schema_keys.py: Config changes
	* src/StartupDialog.py: Config changes
	* src/Editors/_EditPrimary.py: Config changes
	* src/Editors/_EditFamily.py: Config changes
	* src/TipOfDay.py: Config changes
	* src/DisplayState.py: Config changes
	* src/Spell.py: Config changes
	* src/QuestionDialog.py: Config changes
	* src/PluginUtils/_Report.py: Config changes
	* src/PluginUtils/_Plugins.py: Config changes
	* src/PluginUtils/_ReportOptions.py: Config changes
	* src/gramps_main.py: Config changes
	* src/ArgHandler.py: Config changes

2006-04-23  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: Column editor changes
	* src/DataViews/_RepositoryView.py: Column editor changes
	* src/DataViews/_SourceView.py: Column editor changes
	* src/DataViews/_EventView.py: Column editor changes
	* src/DataViews/_FamilyView.py: Column editor changes
	* src/DataViews/_PlaceView.py: Column editor changes
	* src/DataViews/_PersonView.py: Column editor changes
	* src/GrampsDb/_DbUtils.py: fix add_child_to_family to handle refs
	* src/ColumnOrder.py: format changes
	* src/glade/gramps.glade: format changes